--- a/demo.html
+++ b/demo.html
@@ -20,7 +20,7 @@
         <li><input type="button" name="reset" value="reset"></li>
         <li><input type="button" name="smaller" value="-"></li>
     </ul>
-
+    <img src="">
     <script src="js/zepto-1.1.0.all.min.js"></script>
     <script type="text/javascript" src="js/exif.js"></script>
     <script type="text/javascript" src="js/demo.js"></script>
